--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -14,13 +14,15 @@
                 <div class="dish-details">
                     <img src="{{getImageUrl(dish)}}" [alt]="dish.name"/><!--String Interpolation and Attribute binding-->
                     <div class="dish-info">
-                        <div class="name">Name : {{ dish.name }}</div>
-                        <div class="description">Description : {{ dish.description }}</div>
-                        <div class="category">Category : {{ dish.category }}</div>
+                        <div class="name">Name : {{ dish?.name }}</div> <!--'?' is safe navigation operator that is used to handle nulls-->
+                        <div class="description">Description : {{ dish?.description }}</div>
+                        <div class="category">Category : {{ dish?.category }}</div>
                     </div>
                 </div>
                 <div class="price">
-                    <div class="price">Price : ${{ dish.price.toFixed(2)}}</div>
+                    <div *ngIf="dish.discount === 0" class="price" >Price : ${{ dish.price.toFixed(2)}}</div>
+                    <div *ngIf="dish.discount > 0" class="discount" >
+                        Price : ${{(dish.price * (1-dish.discount)).toFixed(2) }}</div>
                     <button class="cta">Buy</button>
                 </div>
             </div>
