child and parent components

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,4 @@
-<html>
-    <body>
-        <div>
-            <img class = "robo" src="/assets/Images/robot.png" alt="robot">
-            <h1>Hello! I am a friendly robot</h1>
-            <p>How can I help you ?</p>
-        </div>
-    </body>
-</html>
+<div>
+    <img class = "banner" src="/assets/Images/banner.png" alt="banner">
+</div>
+
