--- a/src/assets/Images/AngularDemo_files/styles.css
+++ b/src/assets/Images/AngularDemo_files/styles.css
@@ -2332,6 +2332,42 @@ body {
     "Helvetica Neue",
     sans-serif;
 }
+body {
+  background-color: white;
+  font-family:
+    Arial,
+    Helvetica,
+    sans-serif;
+  font-size: 16px;
+  color: black;
+}
+a {
+  color: black;
+  text-decoration: none;
+}
+a.active {
+  padding-bottom: 5px;
+  border-bottom: 2px solid pink;
+}
+a :visited {
+  color: darkblue;
+}
+a :hover {
+  color: lightblue;
+}
+a.cta {
+  color: green;
+}
+img {
+  width: 300px;
+  height: 150px;
+  margin-bottom: 5px;
+}
+.name {
+  font-weight: bold;
+  font-size: medium;
+  color: deeppink;
+}
 
 /* node_modules/bootstrap/dist/css/bootstrap.min.css */
 /*!
