added home page

--- a/src/app/dish/dish.component.html
+++ b/src/app/dish/dish.component.html
@@ -2,9 +2,9 @@
     <div class="dish-details">
         <img src="{{getImageUrl(dish)}}" [alt]="dish.name"/><!--String Interpolation and Attribute binding-->
         <div class="dish-info">
-            <div class="name">Name : {{ dish?.name }}</div> <!--'?' is safe navigation operator that is used to handle nulls-->
-            <div class="description">Description : {{ dish?.description }}</div>
-            <div class="category">Category : {{ dish?.category }}</div>
+            <div class="name">Name : {{ dish.name }}</div> <!--'?' is safe navigation operator that is used to handle nulls-->
+            <div class="description">Description : {{ dish.description }}</div>
+            <div class="category">Category : {{ dish.category }}</div>
         </div>
     </div>
     <div class="price">
