--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,46 @@
-<div>
-    <img class = "banner" src="/assets/Images/banner.png" alt="banner">
-</div>
-
+<div class="container">
+    <div class="hero">
+        <img src="\assets\Images\banner.png" alt="banner" />
+    </div>
+  
+    <div class="promoted">
+      <img src="\assets\Images\rasmalai.png" alt="Special Dish" />
+      <div class="promo-text">
+        <div class="promo-main-text">BEST PLACE FOR FOOD LOVERS</div>
+        <div class="promo-sub-text cta">
+          <div>SAVE 20% ON OUR COMBOS</div>
+          <div>30% OFF ON FIRST ORDER</div>
+        </div>
+      </div>
+      <img src="\assets\Images\chinese.png" alt="Special Dish" />
+    </div>
+  
+    <ul class="robot-parts-cta">
+      <li>
+        <a class="part">
+          <img src="\assets\Images\soups.png" alt="Starters and Soups" />
+          <div>Starters and Soups</div>
+        </a>
+      </li>
+      <li>
+        <a class="part">
+          <img src="\assets\Images\chinese.png" alt="Chinese" />
+          <div>Chinese</div>
+        </a>
+      </li>
+      <li>
+        <a class="part">
+          <img src="\assets\Images\chicken-biryani.png" alt="Main Course" />
+          <div>Main Course</div>
+        </a>
+      </li>
+      <li>
+        <a class="part">
+          <img src="\assets\Images\rasagulla.png" alt="Desserts" />
+          <div>Desserts</div>
+        </a>
+      </li>
+    </ul>
+  
+    
+  </div>
