--- a/src/app/site-header/site-header.component.html
+++ b/src/app/site-header/site-header.component.html
@@ -1,1 +1,14 @@
-<p>site-header works!</p>
+<div class="container">
+    <div class="left">
+        <img class="log" src="/assets/Images/logo.png" alt="Logo">
+        <a routerLink = "/home">Home</a>
+        <a routerLink= "/menu">Menu</a>
+        <div class="cart">
+            <a routerLink="/cart">Cart</a>
+        </div>
+    </div>
+    <div class="right">
+        <a href="">Sign In</a>
+        <a href="" class="cta">Register</a>
+    </div>
+</div>
