--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<!--<app-site-header></app-site-header>-->
+<app-site-header></app-site-header>
 <app-home></app-home>
-<app-menu></app-menu>
+<!-- <app-menu></app-menu> -->
